# libmacho

./: .autotools  .cproject  .gitignore  .project  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  libmacho-1.0.pc.in
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
include/: Makefile.am  Makefile.in
include/macho/: arch.h  command.h  fat.h  macho.h  section.h  segment.h  symtab.h
src/: Makefile.am  Makefile.in  arch.c  command.c  fat.c  macho.c  section.c  segment.c  symbol.c  symtab.c
tools/: Makefile.am  Makefile.in  machoman.c
